<resources>
    <string name="app_name">2048</string>
    <string name="_2048">2048</string>
    <string name="plus">+</string>
    <string name="play">PLAY</string>
    <string name="instructions">Instructions</string>
    <string name="point_goal">Point Goal:</string>
    <string name="title">2048</string>
    <string name="decrease">-</string>
    <string name="leave">LEAVE</string>
    <string name="aaaaaaaa">AAAAAAAA</string>
    <string name="a">a</string>
    <string name="left"><![CDATA[<]]></string>
    <string name="right"><![CDATA[>]]></string>
    <string name="up">^</string>
    <string name="down">v</string>
    <string name="score">Score:</string>
</resources>